# hypertube

./: .env.example  .gitignore  Cargo.toml  Makefile  TODO
.sqlx/: query-0216681c027794fd3f2063f2789c0731dc7702ccd3e0e15279bff53e5043b1a6.json  query-258d8a319a2c0d8605233223383c2f4a052cd7c9fbd6418dea4b901be463d55b.json  query-3c0cdb8e5fd87f14987ea5d15e3d9d501c909db8ce0509142e0bc56961c4cf36.json  query-6f4d8c41a0c0f76de35b908b3543ce9a7ee73a76a201fea7d4404420528a87b2.json  query-7d8e43e50908c1d085b79b6415b1d250038e4759740ecd4ebf03999b92371ae5.json
app/: eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.cjs
app/src/: main.tsx  routeTree.gen.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/api/: index.ts  spec.ts
app/src/assets/: logo.tsx
app/src/hooks/: useGradient.ts  usePlayback.ts
app/src/providers/: gradientProvider.tsx  (+2 more)
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: global.css  main.tsx  routeTree.gen.ts
migrations/: 20241204003219_create_user.sql
src/: config.rs  database.rs  error.rs  lib.rs  main.rs  server.rs  state.rs
src/auth/: error.rs  mod.rs  requests.rs  responses.rs  routes.rs
src/infrastructure/: mod.rs
src/shows/: error.rs  mod.rs  routes.rs
src/stream/: error.rs  mod.rs  routes.rs
src/torrents/: error.rs  mod.rs  requests.rs  responses.rs  routes.rs
src/transcode/: error.rs  mod.rs  route.rs
src/users/: error.rs  mod.rs  requests.rs  routes.rs
src/utils/: mod.rs  telemetry.rs
(+58 files in other folders)
