[package]
name = "hypertube"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["http2"], default-features = false }
actix-cors = "0.7.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
schemars = { package = "apistos-schemars", version = "0.8" }
apistos = { version = "0.4.1", features = ["scalar", "query", "extras", "garde"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
librqbit = "7.0.1"
librqbit-core = "4.0.1"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.6"
tokio-util = "0.7.12"
actix-files = "0.6.6"
futures = "0.3.31"
regex = "1.11.1"
serde_json = "1.0.133"
log = "0.4.22"
dotenvy = "0.15.7"
config = "0.14.1"
garde = { version = "0.20.0", features = ["regex"] }
opentelemetry = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.26.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.9"
tracing-opentelemetry = "0.27.0"
mime_guess = "2.0.5"
urlencoding = "2.1.3"
itertools = "0.13.0"
